--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -27,8 +27,9 @@ html(lang='en')
           Moengage = moe({
               app_id:!{moengage},
               debug_logs: !{moengageId},
-              cluster: "DC_3"
-              //- swPath: "/moengageserviceworker.js"
+              cluster: "DC_3",
+              swPath: "/moengageserviceworker.js"
+              //- swScope: '/a/'
           });
           Moengage.call_web_push();
         link(rel="manifest", href=`${manifest}`)
