--- a/src/components/SelectedPrice/styles.scss
+++ b/src/components/SelectedPrice/styles.scss
@@ -6,6 +6,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: right;
   a {
       font-size: 14px;
       font-family: $font-Lato;
