design and functionality changes

--- a/src/components/CeriseCard/styles.scss
+++ b/src/components/CeriseCard/styles.scss
@@ -9,7 +9,7 @@
         width: 100%;
 
         &.padd-bottom{
-            padding-bottom: 20px;
+            padding-bottom: 30%;
         }
     }
     img{
