--- a/src/components/plpResultItem/styles.scss
+++ b/src/components/plpResultItem/styles.scss
@@ -7,6 +7,44 @@
     width: 100%;
     height: auto;
     overflow: hidden;
+    .overlay{
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: #F7F7F7;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        padding: 0 20%;
+        text-align: center;
+        .text-content{
+            .msg{
+                font-family: $font-Lora;
+                font-size: 16px;
+                color: $charcoal19;
+                margin-bottom: 20px;
+            }
+            .byline{
+                font-family: $font-Montserrat;
+                font-size: 12px;
+                color: $charcoal19;
+            }
+        }
+        .reset-link{
+            font-family: $font-Montserrat;
+            font-size: 12px;
+            color: $charcoal19;
+            text-transform: uppercase;
+            text-decoration: underline;
+            text-underline-offset: 4px;
+            &:hover{
+                cursor: pointer;
+            }
+        }
+    }
 }
 .image-content {
     text-align: center;
@@ -27,6 +65,22 @@
     bottom: 0;
     left: 0;
     right: 0;
+}
+
+.reset-tile-container{
+    background: #F7F7F7;
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: calc(100% - 125px);
+    &.grid-fix{
+        height: calc(100% - 120px);
+    }
 }
 
 .plpMain:hover{
