--- a/src/containers/customer/components/styles.scss
+++ b/src/containers/customer/components/styles.scss
@@ -555,6 +555,10 @@ ol {
   padding-right: 40px;
 }
 
+.accordion-header-open{
+  border-bottom: 1px solid lightgray;
+}
+
 .accordion-body{
   padding-top: 20px;
   padding-bottom: 20px;
