--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -263,7 +263,7 @@
     bottom: 145px;
     position: fixed;
     right: 12px;
-    z-index: 9;
+    z-index: 100000000;
   }
   .chat-container-down {
     bottom: 75px;
