--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -11,7 +11,14 @@
   letter-spacing: 0.5px;
   padding: 0px 52px;
   &.track-order{
-    padding: 0px 130px
+    padding: 0px 100px
+  }
+}
+@media screen  and (max-width: 992px){
+  .form-subheading{
+    &.track-order{
+      padding: 0px 20px;
+    }
   }
 }
 
@@ -579,36 +586,42 @@
         }
     }
       .main-block {
-        text-transform: uppercase;
-          width: 170px;
-          height: 45px;
-          display: inline-block;
-          line-height: 50px;
-        font-family: $font-Lato;
-          text-align: center;
-
-        p:first-child {
-          font-size: 12px;
-          font-weight: bold;
-          padding-top: 5px;
+        position: relative;
+        height: 100px;
+        margin-left: 30px;
+        &.active{
+          border-left: 1px solid $aqua;
         }
-        p:last-child {
-          color: tint(#000,80%);
-          font-size: 10px;
-          line-height: 9px;
+        &.inactive{
+          border-left: 1px solid $lightest-charcoal;
         }
-
-        &.cerisebg {
-          background: url('../../../images/track/curlyFillCeriz.svg') no-repeat;
-          color: $white;
+        &.delivered{
+          height: 30px;
         }
-        &.whitebg {
-          background: url('../../../images/track/redBorder.svg') no-repeat;
-          color: Black;
+        .circle{
+          height: 18px;
+          width: 18px;
+          border-radius: 100%;
+          position: absolute;
+          left:-9px;
+          top:-9px;
+          &.active{
+            background-color: $aqua;
+            border: 1px solid $aqua;
+          }
+          &.inactive{
+            background-color: $white;
+            border: 1px solid lightgray;
+          }
         }
-        &.grayborder {
-          background: url('../../../images/track/greyButton.svg') no-repeat;
-          color: tint(#000, 80%);
+        .text-block{
+          margin-left: 35px;
+          transform: translateY(-12px);
+          position: relative;
+          .live-location{
+            font-size: 10px;
+            display: flex;
+          }
         }
       }
 }
@@ -925,7 +938,7 @@
 }
 
 .view-tnc{
-  @include b4_12px_montserrat_charcoal();
+  @include b5_10px_montserrat_charcoal();
   text-transform: uppercase;
   letter-spacing: 0.36px;
   text-decoration: underline;
