--- a/src/components/CeriseCard/styles.scss
+++ b/src/components/CeriseCard/styles.scss
@@ -97,7 +97,7 @@
         display: flex;
         justify-content: space-between;
         .progressbar-wrp-container{
-            width: 300%;
+            width: 600%;
             margin: auto 0;
             &.inactive{
                 display: none;
@@ -105,6 +105,9 @@
             .progressbar-wrp{
                 border-radius: 10px;
                 background-color: $cerise-light;
+                &.gold-background{
+                    background-color: $gold-light;
+                }
                 .progressbar{
                     border-radius: 10px;
                     background-color: $light-beige;
