--- a/src/components/Address/styles.scss
+++ b/src/components/Address/styles.scss
@@ -57,6 +57,9 @@
   &.default{
     border: 1px solid #4c4c4c;
   }
+  &.is-tulsi{
+    border: 1px solid #8cb8aa;
+  }
   .address-item {
     background-color: #fff;
     // height: 308px;
