--- a/src/components/OtpComponent/styles.scss
+++ b/src/components/OtpComponent/styles.scss
@@ -484,8 +484,8 @@ hr {
 
   .otp-input-err{
     max-width: 100%;
-    width: 263px;
-    margin: 0 auto;
+    // width: 263px;
+    // margin: 0 auto;
     letter-spacing: 0.5px;
 
     .otp-input-wrp{
@@ -495,7 +495,8 @@ hr {
       .otp-input{
         width: 50px;
         height: 50px;
-        flex: 0 0 40px;
+        // flex: 0 0 40px;
+        flex-basis: 50px;
         border: 1px solid #E5E5E5 !important;
         border-radius: 7px !important;
         opacity: 1;
