--- a/src/components/PlpResultImageSlider/styles.css
+++ b/src/components/PlpResultImageSlider/styles.css
@@ -29,6 +29,7 @@
     color: transparent;
     border: 0;
     outline: none;
+    margin: 0 auto;
 }
 .imageSlideronatiner .slick-slider .slick-dots li.slick-active button::before{
     content: unset;
