--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1295,6 +1295,7 @@ visibility: visible !important;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding: 0 7%;
   a {
     @include b3_14px_montserrat_charcoal();
     text-transform: capitalize;
