--- a/src/components/Accordion/styles.scss
+++ b/src/components/Accordion/styles.scss
@@ -10,6 +10,9 @@
     display: flex;
     justify-content: space-between;
     cursor: pointer;
+    &.empty-header{
+      max-height: 0px !important;
+      padding: 0px !important;    }
 }
 
 //Add padding when show
