added fade for color filter

--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -384,6 +384,7 @@
         margin-bottom: 0;
       }
       .disableColors{
+        opacity: 0.5;
         // color: #4C4C4C;
         // cursor: not-allowed;
       }
