--- a/src/containers/myAccount/components/CeriseDashboard/styles.scss
+++ b/src/containers/myAccount/components/CeriseDashboard/styles.scss
@@ -129,7 +129,7 @@
         display: flex;
         padding: 15px 0;
 
-        &:nth-child(1){
+        &.remove-border{
             border-top: none;
         }
 
