--- a/src/containers/myAccount/components/TransactionDashboard/styles.scss
+++ b/src/containers/myAccount/components/TransactionDashboard/styles.scss
@@ -188,6 +188,7 @@
        }
 
        .icon-carrot{
+        cursor: pointer;
         span{
             content: '';
             // float: left;
@@ -198,6 +199,7 @@
             position: absolute;
             transform: rotate(45deg);
             top: 2px;
+
             // left: 30px;
 
             &.active{
