--- a/src/components/plpResultItem/styles.scss
+++ b/src/components/plpResultItem/styles.scss
@@ -20,17 +20,28 @@
         align-items: center;
         padding: 0 20%;
         text-align: center;
+        img{
+            &.mobile-grid{
+                height: 50px;
+            }
+        }
         .text-content{
             .msg{
                 font-family: $font-Lora;
                 font-size: 16px;
                 color: $charcoal19;
                 margin-bottom: 20px;
+                &.mobile-grid{
+                    font-size: 10px;
+                }
             }
             .byline{
                 font-family: $font-Montserrat;
                 font-size: 12px;
                 color: $charcoal19;
+                &.mobile-grid{
+                    font-size: 10px;
+                }
             }
         }
         .reset-link{
