--- a/src/containers/loyaltyLanding/styles.scss
+++ b/src/containers/loyaltyLanding/styles.scss
@@ -168,7 +168,8 @@
     text-align: center;
 
     @media screen and (max-width:992px) {
-      padding: 20px 35px;
+      padding: 20px 0px;
+      line-height: 22px;
     }
 
     a{
