--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -225,7 +225,7 @@
 .mobile-filter-menu {
     position: fixed;
     bottom: 0;
-    top: $main-header;
+    top: 90px;
     left: 0;
     z-index: 11;
     background-color: white;
