--- a/src/containers/search/styles.scss
+++ b/src/containers/search/styles.scss
@@ -64,7 +64,7 @@
 
 @media screen and (max-width: 992px) {
   .page-body{
-    margin-top: 100px;
+    margin-top: $header-height;
   }
   .page-body-timer {
     margin-top: $header-height + $timer-height;
@@ -1027,4 +1027,15 @@ input[type="radio"]:checked, [type="checkbox"]:not(:checked),
 
 .remove-border{
   border-bottom:none !important;
+}
+
+.npfContainer{
+  padding: 0px 3px;
+  .npf{
+    font-family: "Montserrat", "sans-serif";
+    font-size: 10px;
+    color: #191919;
+    line-height: 35px;
+    padding: 8px 0px 8px 6px;
+  }
 }
