--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -42,7 +42,7 @@
 }
 
 .page-body{
-  margin-top: $header-height;
+  margin-top: $header-height + $secondary-header-height;
 }
 .page-body-timer {
   margin-top: $header-height + $timer-height;
