--- a/src/components/dropdown/CeriseProfileMenu/styles.scss
+++ b/src/components/dropdown/CeriseProfileMenu/styles.scss
@@ -4,7 +4,7 @@
 .cerise-card-menu-wrp {
     display: flex;
     max-width: 630px;
-    background: white;
+    background: #f9f8f4;
 
     .cerise-card-menu{
         margin:25px;
