Name and default Fix

--- a/src/components/Address/styles.scss
+++ b/src/components/Address/styles.scss
@@ -395,6 +395,9 @@
       font-weight: 400;
       color: #808080;
     }
+    &.default-checkout-fix{
+      font-family: $font-Lato;
+    }
   }
 
   .separator {
