--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1205,6 +1205,7 @@ $list: $grey 92%, $white 8%;
   font-size: 13px;
   color: $cerise;
   font-style: italic;
+  letter-spacing: 0.5px;
 }
 
 @mixin search_text{
