--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -245,6 +245,7 @@ font-weight: bold;
     background-color: tint(#000, 95%);
     color: tint(#000, 50%) !important;
     cursor: default;
+    border: none;
   }
   a {
     font-weight: normal;
@@ -286,6 +287,7 @@ font-weight: bold;
   background-color: tint(#000, 95%);
   color: tint(#000, 50%)  !important;
   cursor: default !important;
+  border: none;
 }
 
 .error-border {
